# RPO

LAB1/app/src/main/cpp/: CMakeLists.txt
LAB1/app/src/main/java/com/example/fclient/: MainActivity.java
LAB1/app/src/main/res/layout/: activity_main.xml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/fclient/: PinPadActivity.java  TransactionEvents.java
app/src/main/res/drawable/: pin_display_background.xml
app/src/main/res/layout/: activity_pin_pad.xml
app/src/main/res/values/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
